<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_photo">Capture photo</string>
    <string name="accessibility_capture_video_start">Start Recording</string>
    <string name="accessibility_capture_video_stop">Stop Recording</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_menu_button">Menu</string>
    <string name="accessibility_mode_burst">5 second burst</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="accessibility_mode_list_hidden">Mode list closed</string>
    <string name="accessibility_mode_list_shown">Mode list open</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="accessibility_mode_options">Options</string>
    <string name="accessibility_mode_zoom_minus">Zoom out</string>
    <string name="accessibility_mode_zoom_plus">Zoom in</string>
    <string name="accessibility_open_photo_mode">Open photo mode</string>
    <string name="accessibility_open_video_mode">Open video mode</string>
    <string name="accessibility_photo_captured">Photo Captured</string>
    <string name="accessibility_review_cancel">Review cancel</string>
    <string name="accessibility_review_ok">Review done</string>
    <string name="accessibility_review_retake">Review retake</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_switch_photo_mode">Open photo mode</string>
    <string name="accessibility_switch_to_camera">Switch to photo</string>
    <string name="accessibility_switch_to_gcam">Switch to high quality</string>
    <string name="accessibility_switch_to_panorama">Switch to panorama</string>
    <string name="accessibility_switch_to_photo_sphere">Switch to Photo Sphere</string>
    <string name="accessibility_switch_to_refocus">Switch to Refocus</string>
    <string name="accessibility_switch_to_video">Switch to video</string>
    <string name="accessibility_switch_video_mode">Open video mode</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="accessibility_zoom_announcement">Zoom value is %.1f</string>
    <string name="action_calendar">Add Event</string>
    <string name="action_call">Call</string>
    <string name="action_contact">Add Contact</string>
    <string name="action_copy">Copy text</string>
    <string name="action_email">Send Email</string>
    <string name="action_image_search">Search Image</string>
    <string name="action_keep">Keep</string>
    <string name="action_lookup">Shopping</string>
    <string name="action_map">Maps</string>
    <string name="action_message_image">Message</string>
    <string name="action_more">More</string>
    <string name="action_open_url">Open URL</string>
    <string name="action_save">Save image</string>
    <string name="action_search">Search</string>
    <string name="action_share_chooser_title">Share with</string>
    <string name="action_shopping">Shopping</string>
    <string name="action_sms">Message</string>
    <string name="action_translate">Translate</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="advice_scene_distance_description">The person or subject is to close to the camera to produce a sharp image.</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="advice_snackbar_dirty_lens">Lens may be dirty</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="aggregate_add_field">Add Field</string>
    <string name="all_photos">ALL PHOTOS</string>
    <string name="animation">Animation</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="auto">Auto</string>
    <string name="auto_flash_indicator_chip">Flash will fire</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_last_filmstrip_item">Last</string>
    <string name="btn_next_filmstrip_item">Next</string>
    <string name="btn_zoom_minus">Z-</string>
    <string name="btn_zoom_plus">Z+</string>
    <string name="burst">Burst (%1$s Photos)</string>
    <string name="burst_creations">Creations</string>
    <string name="burst_date_content_description">Stack of %1$s burst photos taken on %2$s</string>
    <string name="burst_description">Tap the burst button to show the best photos only</string>
    <string name="burst_editor_best_frame_description">Best burst frame</string>
    <string name="burst_editor_close_speed_dial_description">Close creations menu</string>
    <string name="burst_editor_frame_description">Burst frame %1$s</string>
    <string name="burst_editor_navigate_up">Navigate up</string>
    <string name="burst_editor_open_speed_dial_description">Add creations</string>
    <string name="burst_editor_section_header_all">All Photos</string>
    <string name="burst_editor_section_header_best">Best Photos</string>
    <string name="burst_frames">Frames</string>
    <string name="burst_name">Smartburst</string>
    <string name="burst_process_creation">Saving</string>
    <string name="burst_process_done">All items processed</string>
    <string name="burst_process_start">Processing Burst</string>
    <string name="hdr_enhanced_desc">HDR+ enhanced</string>
    <string name="mode_video">Video</string>
    <string name="photo">Photo</string>
    <string name="pref_auto_generate_artifacts_toggle">Auto-generate creations</string>
    <string name="pref_burst_settings">Burst settings</string>
    <string name="pref_burst_title">Smartburst</string>
    <string name="pref_camera_double_tap_zoom_title">Double-tap to zoom</string>
    <string name="pref_camera_gestures_title">Gestures</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_sounds_title">Camera sounds</string>
    <string name="pref_camera_volume_key_action_title">Volume key action</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_developer_settings">Developer Settings</string>
    <string name="pref_experimental">Experimental</string>
    <string name="pref_gcam_hdr_raw_summary">Save raw DNG files when taking HDR+ images in addition to the standard JPG</string>
    <string name="pref_gcam_hdr_raw_title">HDR+ RAW+JPEG</string>
    <string name="pref_hdr_plus_control_summary">Show manual control for HDR+. When this control is not shown, HDR+ is on.</string>
    <string name="pref_hdr_plus_control_title">HDR+ control</string>
    <string name="pref_smartburst_summary">Save only the best 8 images from a burst</string>
    <string name="pref_video_quality_large">large</string>
    <string name="pref_video_stabilization">Video stabilization</string>
    <string name="setting_back_camera_photo">Back camera photo resolution</string>
    <string name="setting_back_camera_video">Back camera video resolution</string>
    <string name="setting_front_camera_photo">Front camera photo resolution</string>
    <string name="setting_front_camera_video">Front camera video resolution</string>
    <string name="setting_general">General</string>
    <string name="setting_google_help_and_feedback">Help &amp; feedback</string>
    <string name="volume_key_shutter">Shutter</string>
    <string name="pref_parameters_camera_title">Frame Count</string>
    <string name="pref_parameters_camera_default">0</string>
    <string name="pref_enable_sblp_title">LG G6 Color Fix</string>
    <string name="pref_enable_sblp_summary">Remove Purple in Low Light with HDR+ Enhanced</string>
    <string name="pref_jpeg_quality_title">@string/pref_title_refocus_quality</string>
    <string name="pref_jpeg_quality_default">95</string>
    <string name="pref_aemode_title">Adaptive Shutter Speed</string>
    <string name="pref_aemode_summary">Decreases shutter speed with lower light</string>
    <string name="pref_portrait_hdrenh_title">Forced on Portrait Mode</string>
    <string name="pref_portrait_hdrenh_summary">Increases dynamic range with Portrait Mode but disables ZSL</string>
    <string name="pref_aemodespeed_title">@string/exposure_time</string>
    <string name="pref_aemodespeed_default">2</string>
    <string name="pref_slomo_title">@string/mode_video_slomo</string>
    <string name="pref_slomo_summary">Must force close app</string>
    <string name="pref_disable_zsl_title">Disable ZSL Config</string>
    <string name="pref_disable_zsl_summary">Toggle between Pixel 2017 ZSL and Nexus 6 No ZSL</string>
    <string name="pref_model_title">@string/model</string>
    <string name="pref_model_default">0</string>
    <string name="pref_model_summary">Must force close app</string>
    <string name="pref_hexagon_title">Use Hexagon DSP</string>
    <string name="pref_hexagon_default">2</string>
    <string name="pref_hexagon_summary">May offer better or worse perfomance. Must force close app.</string>
</resources>